Fix formatting on small screens.

--- a/main.css
+++ b/main.css
@@ -92,6 +92,6 @@ main ul li {
     
     /* Increase spacing between nav and content when stacked */
     main {
-        padding-top: 200px;
+        margin-top: 120px;
     }
 }
